--- a/scss/dash.scss
+++ b/scss/dash.scss
@@ -131,14 +131,13 @@ body {
     padding: 14px 21px;
     border-radius: 2px 2px 0 0;
     font-size: 20px;
-    font-weight: normal;
     text-transform: uppercase;
     background: #4b4276;
     cursor: pointer;
     position: relative;
-    top: 4px;
     transition: all 0.2s ease-in-out;
   }
+
   .tabs label:hover {
     background: #bdb8d7;
   }
@@ -155,34 +154,12 @@ body {
     left: 0;
     background: #4b4276;
   }
-  .tabs [id^="tab"]:checked + label {
+  .tabs [type=radio]:checked + label {
     top: 0;
     padding-top: 17px;
     background: #bdb8d7;
   }
-  .tabs [id^="tab"]:checked ~ [id^="tab-content"] {
+  .tabs [type=radio]:checked ~ .tab-content {
     display: block;
   }
   
-  p.link {
-    clear: both;
-    margin: 380px 0 0 15px;
-  }
-  p.link a {
-    text-transform: uppercase;
-    text-decoration: none;
-    display: inline-block;
-    color: #fff;
-    padding: 5px 10px;
-    margin: 0 5px;
-    background-color: #4b4276;
-    -moz-transition: all 0.2s ease-in;
-    -o-transition: all 0.2s ease-in;
-    -webkit-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
-  }
-  p.link a:hover {
-    background-color: #4b4276;
-  }
-  
-// .wrapper .sidebar ul li a 
